fixing flexbox sizing on mobile screens

--- a/index.css
+++ b/index.css
@@ -4,10 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 /* Card Based Layout - Base styles */
-
 body {
   background: #eeeeee;
   box-sizing: border-box;
+  padding-right:25px;
+  padding-left:25px;
 }
 
 /*--------------------------------------------------------------
@@ -121,10 +122,10 @@ big {
 }
 
 .masthead {
-
   background-image: linear-gradient(to right, #005184, #22AAFF);
   border: 1px solid #205080;
   border-radius:1em;
+  margin-top: 10px;
 }
 
 .masthead p, .masthead p a {
@@ -166,7 +167,7 @@ big {
 
 .card {
   background: white;
-  margin-bottom: 5px;
+  margin-bottom: -5px;
   margin-top: 10px;
 }
 
@@ -199,18 +200,25 @@ big {
  gap: 1vw;
 }
 
+
+@media screen  and (min-width: 768px) and (max-width: 1024px) {
+  .card {
+    flex: 0 1 100% !important;
+    flex-grow: 1;
+  } 
+
+  .cards {
+    display: flex;
+  }   
+}
+
 .card {
   flex: 0 1 24%;
   border-radius:1em;
-  box-shadow: 0 3px 10px #005184;
   transition: all .2s ease-in-out;
   border: 1px solid #205080;
-  flex-grow: 1;
 }
 
-.card:hover { 
-  transform: scale(1.05); 
-}
 
 .analysisContainer {
   display: flex;
